[452] add sign in/out via dsi

--- a/app/views/gias/dashboard.html.erb
+++ b/app/views/gias/dashboard.html.erb
@@ -1,5 +1,5 @@
-<h1>GIAS Data</h1>
-summary
+<h1 class="govuk-heading-xl">GIAS Data</h1>
+
 <dl class="govuk-summary-list">
 
     <div class="govuk-summary-list__row">
