--- a/docs/source/release-notes.html.md.erb
+++ b/docs/source/release-notes.html.md.erb
@@ -5,6 +5,10 @@ weight: 2
 
 # Release Notes
 
+## 5 March 2021
+
+- Add `subject_codes` field to `CourseAttributes`. This is an array of two-digit subject codes as strings, corresponding to subjects available on the `/subjects` endpoint.
+
 ## v1.0 - 13 March 2020
 
 - Initial release of the API.
