--- a/app/views/sign_in/index.html.erb
+++ b/app/views/sign_in/index.html.erb
@@ -3,13 +3,13 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
 
-    <h1 class="govuk-heading-l">Sign in to Postgraduate teaching training courses admin section</h1>
+    <h1 class="govuk-heading-l">Sign in to Teacher Training API Admin</h1>
 
     <p class="govuk-body-m"> Use DfE Sign-in to access your account. You need to be a registered administrator to login to these pages.</p>
 
     <%= govuk_button_to("Sign in using DfE Sign-in", "/auth/dfe") %>
 
-    <p class="govuk-body-m">If you do not have a DfE Sign-in account but need access to Publish teaching training email
+    <p class="govuk-body-m">If you do not have a DfE Sign-in account but need access to Teacher Training API Admin
         <%= bat_contact_mail_to %>.
     </p>
   </div>
