[452] DSI integration completed

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
           </span>
         </span>
         <span class="govuk-header__product-name">
-          Publish teacher training courses
+          Teacher Training API Admin
         </span>
       <% end %>
     </div>
@@ -25,8 +25,7 @@
                 <%= link_to "Sign out", sign_out_path, class: "govuk-header__link" %>
                 <%= link_to "(#{@current_user.first_name} #{@current_user.last_name})", "#{Settings.dfe_signin.profile}", class: "govuk-header__link" %>
               <% else %>
-              <%# TODO: this needs to actually work %>
-                <%= link_to "Sign in", "/auth/dfe", class: "govuk-header__link", method: :post %>
+                <%= link_to "Sign in", "/sign-in", class: "govuk-header__link", method: :post %>
               <% end %>
             </li>
         </ul>
