[452] add graph generation for gias views

--- a/app/views/gias/establishments/show.html.erb
+++ b/app/views/gias/establishments/show.html.erb
@@ -31,3 +31,9 @@
 <% end %>
 
 </div>
+
+<div class="govuk-grid-row">
+    <h2 class="govuk-heading-l">Graph Diagram</h2>
+
+    <%= image_tag graph_gias_establishment_path(@establishment.urn) %>
+</div>
