--- a/app/views/gias/providers/index.html.erb
+++ b/app/views/gias/providers/index.html.erb
@@ -6,7 +6,7 @@
     </div>
 
     <div class="govuk-grid-column-three-quarters">
-        <h2 class="govuk-heading-l">Establishments</h2>
+        <h2 class="govuk-heading-l">Providers</h2>
 
         <ul class="govuk-list govuk-list--spaced">
             <% @providers.each do |provider| %>
