--- a/app/views/gias/providers/show.html.erb
+++ b/app/views/gias/providers/show.html.erb
@@ -53,3 +53,9 @@
 <% end %>
 
 </div>
+
+<div class="govuk-grid-row">
+    <h2 class="govuk-heading-l">Graph Diagram</h2>
+
+    <%= image_tag graph_gias_provider_path(@provider) %>
+</div>
