[452] add imap for gias graph and colours
- Support for a server-generated image map for the graph generated of
  the matches between provider and GIAS establishment data.
- Add colours to represent name or postcode matches.
- Other fixes for graph generation to reduce false link generation.

--- a/app/views/gias/establishments/show.html.erb
+++ b/app/views/gias/establishments/show.html.erb
@@ -35,5 +35,6 @@
 <div class="govuk-grid-row">
     <h2 class="govuk-heading-l">Graph Diagram</h2>
 
-    <%= image_tag graph_gias_establishment_path(@establishment.urn) %>
+    <%= image_tag(graph_gias_establishment_path(@establishment.urn), usemap: "#Establishment Graph") %>
+    <%= @graph_cmapx.html_safe %>
 </div>
