--- a/app/views/gias/providers/show.html.erb
+++ b/app/views/gias/providers/show.html.erb
@@ -57,5 +57,6 @@
 <div class="govuk-grid-row">
     <h2 class="govuk-heading-l">Graph Diagram</h2>
 
-    <%= image_tag graph_gias_provider_path(@provider) %>
+    <%= image_tag(graph_gias_provider_path(@provider), usemap: "#Provider Graph") %>
+    <%= @graph_cmapx.html_safe %>
 </div>
