[1114] Clean up for 37980e65c49efa548fdcb6638ab61878f26040e9

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
     <%= render partial: 'layouts/header' %>
 
     <div class="govuk-width-container">
-      <%#%= render partial: 'layouts/beta-banner' %>
+      <%= render partial: 'layouts/beta-banner' %>
       <%= yield(:before_content) %>
 
       <main class="govuk-main-wrapper" id="main-content" role="main">
