[1114] Fixed minor issue

--- a/app/views/sign_in/index.html.erb
+++ b/app/views/sign_in/index.html.erb
@@ -9,8 +9,7 @@
 
     <%= govuk_button_to("Sign in using DfE Sign-in", "/auth/dfe") %>
 
-    <p class="govuk-body-m">If you do not have a DfE Sign-in account but need access to Teacher Training API Admin
-        <%= bat_contact_mail_to %>.
+    <p class="govuk-body-m">If you do not have a DfE Sign-in account but need access to Teacher Training API Admin,   email <%= bat_contact_mail_to %>.
     </p>
   </div>
 </div>
