--- a/app/views/sign_in/new.html.erb
+++ b/app/views/sign_in/new.html.erb
@@ -6,7 +6,7 @@
     <h1 class="govuk-heading-l">Ask for an account to Teacher Training API Admin</h1>
 
     <p class="govuk-body"> Although you have a DfE Sign-in account, you also need an account
-                             for this service. Contact <%= bat_contact_mail_to %>.</p> 
+                             for this service. Contact <%= support_email %>.</p> 
 
   </div>
 </div>
